--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
             <div class="controls">
                 <button id="langBtn" class="btn btn-secondary">
-                    <img src="Languages/English.png" alt="Language" class="icon">
+                    <img src="English.png" alt="Language" class="icon">
                     <span>English</span>
                 </button>
             </div>
