--- a/index.html
+++ b/index.html
@@ -189,7 +189,10 @@
 
     <!-- Image Modal -->
     <div id="imageModal" class="image-modal" style="display: none;">
-        <img id="modalImage" class="modal-image" alt="History Image">
+        <div class="modal-content">
+            <img id="modalImage" class="modal-image" alt="History Image">
+            <div id="modalInstruction" class="modal-instruction"></div>
+        </div>
     </div>
 
     <!-- Bottom Ad Slot -->
